static/css/base.css
html{
    height: 100%;
}

body{
  
}

#navbar-row{
    display: flex;
    justify-content: space-between;
}

#navbar-search{
    display: flex;
}

.overlay{
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

@media (min-width: 992px) {
    .container{
        max-width: 90%;
    }
}

